--- a/app/src/main/res/layout/mapview.xml
+++ b/app/src/main/res/layout/mapview.xml
@@ -9,5 +9,5 @@
         class="com.google.android.gms.maps.SupportMapFragment"
         android:id="@+id/map"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="wrap_content"/>
 </LinearLayout>
