--- a/app/src/main/res/layout/streetview.xml
+++ b/app/src/main/res/layout/streetview.xml
@@ -2,12 +2,12 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="220dp"
+    android:layout_height="wrap_content"
     >
     <fragment
         android:id="@+id/str"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         class="com.google.android.gms.maps.SupportStreetViewPanoramaFragment"/>
     <!--class="com.google.android.gms.maps.SupportStreetViewPanoramaFragment"
     <com.google.android.gms.maps.MapView
